remove passwords, so silly of me

--- a/sockite.xcodeproj/xcshareddata/xcschemes/sockite-Package.xcscheme
+++ b/sockite.xcodeproj/xcshareddata/xcschemes/sockite-Package.xcscheme
@@ -28,6 +28,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "swiftredunda::SwiftRedunda"
+               BuildableName = "SwiftRedunda.framework"
+               BlueprintName = "SwiftRedunda"
+               ReferencedContainer = "container:sockite.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "SwiftChatSE::SwiftChatSE"
                BuildableName = "SwiftChatSE.framework"
                BlueprintName = "SwiftChatSE"
