--- a/sockite.xcodeproj/xcshareddata/xcschemes/sockite-Package.xcscheme
+++ b/sockite.xcodeproj/xcshareddata/xcschemes/sockite-Package.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "sockite::sockite"
-               BuildableName = "sockite"
-               BlueprintName = "sockite"
+               BlueprintIdentifier = "swiftredunda::SwiftRedunda"
+               BuildableName = "SwiftRedunda.framework"
+               BlueprintName = "SwiftRedunda"
                ReferencedContainer = "container:sockite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -56,9 +56,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "swiftredunda::SwiftRedunda"
-               BuildableName = "SwiftRedunda.framework"
-               BlueprintName = "SwiftRedunda"
+               BlueprintIdentifier = "Rainbow::Rainbow"
+               BuildableName = "Rainbow.framework"
+               BlueprintName = "Rainbow"
                ReferencedContainer = "container:sockite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -76,13 +76,26 @@
                ReferencedContainer = "container:sockite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "sockite::sockite"
+               BuildableName = "sockite"
+               BlueprintName = "sockite"
+               ReferencedContainer = "container:sockite.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
@@ -93,7 +106,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -103,9 +115,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "sockite::sockite"
-            BuildableName = "sockite"
-            BlueprintName = "sockite"
+            BlueprintIdentifier = "swiftredunda::SwiftRedunda"
+            BuildableName = "SwiftRedunda.framework"
+            BlueprintName = "SwiftRedunda"
             ReferencedContainer = "container:sockite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
