add sqlite methods

--- a/sockite.xcodeproj/xcshareddata/xcschemes/sockite-Package.xcscheme
+++ b/sockite.xcodeproj/xcshareddata/xcschemes/sockite-Package.xcscheme
@@ -14,37 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "sockite::sockite"
-               BuildableName = "sockite"
-               BlueprintName = "sockite"
-               ReferencedContainer = "container:sockite.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "swiftredunda::SwiftRedunda"
                BuildableName = "SwiftRedunda.framework"
                BlueprintName = "SwiftRedunda"
-               ReferencedContainer = "container:sockite.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "SwiftChatSE::SwiftChatSE"
-               BuildableName = "SwiftChatSE.framework"
-               BlueprintName = "SwiftChatSE"
                ReferencedContainer = "container:sockite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -73,6 +45,62 @@
                BlueprintIdentifier = "Yams::CYaml"
                BuildableName = "CYaml.framework"
                BlueprintName = "CYaml"
+               ReferencedContainer = "container:sockite.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SQLite.swift::SQLite"
+               BuildableName = "SQLite.framework"
+               BlueprintName = "SQLite"
+               ReferencedContainer = "container:sockite.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SQLite.swift::SQLiteObjc"
+               BuildableName = "SQLiteObjc.framework"
+               BlueprintName = "SQLiteObjc"
+               ReferencedContainer = "container:sockite.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SwiftChatSE::SwiftChatSE"
+               BuildableName = "SwiftChatSE.framework"
+               BlueprintName = "SwiftChatSE"
+               ReferencedContainer = "container:sockite.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "sockite::sockite"
+               BuildableName = "sockite"
+               BlueprintName = "sockite"
                ReferencedContainer = "container:sockite.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -115,9 +143,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "sockite::sockite"
-            BuildableName = "sockite"
-            BlueprintName = "sockite"
+            BlueprintIdentifier = "swiftredunda::SwiftRedunda"
+            BuildableName = "SwiftRedunda.framework"
+            BlueprintName = "SwiftRedunda"
             ReferencedContainer = "container:sockite.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
